--- a/css/style.css
+++ b/css/style.css
@@ -4,32 +4,80 @@ body {
     font-weight: 400;
 }
 
-h1{
-    font-family: Calibri, sans-serif;
-    color: white;
-    text-align: center;
+.navigation-links ul{
+    list-style-type: none;
+    padding-left: 2px;
+}
+
+.navigation-links a {
+    cursor: pointer;
+}
+
+.navigation-links li > a:hover {
     background-color: rgb(46, 47, 66);
-    padding-block: 20px;
-}
-
-h2{
-    text-align: center;
-}
-
-h3{
-    font-family: 'Raleway', sans-serif;
-}
-
-a{
-    cursor:pointer;
-}
-
-a:hover{
-    background-color:rgb(46, 47, 66);
     color: white;
     padding: 5px;
 }
 
+.about-us ul{
+    list-style-type: none;
+    padding-left: 2px;
+   
+}
+.about-us h3{
+    font-family: 'Raleway', sans-serif;
+}
+
+.services ul{
+    list-style-type: none;
+    padding-left: 2px;
+}
+
+.services h2 {
+    text-align: center;
+}
+
+.team ul{
+    list-style-type: none;
+    padding-left: 2px;
+}
+
+.team h2{
+    text-align: center;
+}
+
+.logo-image{
+    width: 5%;
+    height: 5%;
+    gap: 50px;
+}
+
+.container{
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: rgb(46, 47, 66);
+}
+
+.container h1 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 56px;
+    color: white;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+}
+
+button{
+    padding: 10px 10px;
+    border-radius: 4px;
+    border: none;
+    background-color: #4D5AE5;
+    color: white;
+    display: flex;
+    justify-content: flex-start;
+    box-shadow: 0px 4px 4px 0px #00000026;
+    cursor: pointer;
+}
 
 footer{
     font-family: Calibri, sans-serif;
@@ -38,10 +86,5 @@ footer{
         padding-left: 40px;
         background-color: rgb(46, 47, 66);
         padding-block: 20px;
+        padding-left: 10px;
 }
-
-.color-change-on-hover:hover{
-    color: red;
-    /* Change to the desired color when hovered */
-}
-
