--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,29 @@ body {
     font-weight: 400;
 }
 
+.navigation-links .logo {
+    display: flex;
+    text-decoration: none;
+}
+
+.navigation-links .logo h1[title="WEB"]{
+    color: #4D5AE5;
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 21px;
+    letter-spacing: 0.03em;
+}
+
+.navigation-links .logo h1[title="STUDIO"]{
+    color: rgb(46, 47, 66);
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 21px;
+    letter-spacing: 0.03em;
+}
+
 .navigation-links ul{
     list-style-type: none;
     padding-left: 2px;
@@ -19,7 +42,11 @@ body {
     padding: 5px;
 }
 
-.about-us ul{
+.navigation-links .contacts:focus{
+    color:gold;
+}
+
+.about-us ul{   
     list-style-type: none;
     padding-left: 2px;
    
@@ -46,12 +73,6 @@ body {
     text-align: center;
 }
 
-.logo-image{
-    width: 5%;
-    height: 5%;
-    gap: 50px;
-}
-
 .container{
     flex-direction: column;
     align-items: center;
@@ -67,24 +88,49 @@ body {
     text-transform: uppercase;
 }
 
-button{
+.hero-content button{
     padding: 10px 10px;
     border-radius: 4px;
     border: none;
-    background-color: #4D5AE5;
     color: white;
     display: flex;
     justify-content: flex-start;
     box-shadow: 0px 4px 4px 0px #00000026;
     cursor: pointer;
+    background-color: #4D5AE5;
 }
 
-footer{
+
+.footer-section{
+    color: white;
+    text-align: left;
+    padding-left: 40px;
+    background-color: rgb(46, 47, 66);
+    padding-block: 20px;
+    padding-left: 10px;
     font-family: Calibri, sans-serif;
-        color: white;
-        text-align: left;
-        padding-left: 40px;
-        background-color: rgb(46, 47, 66);
-        padding-block: 20px;
-        padding-left: 10px;
 }
+
+.footer-section .logo{
+    text-decoration: none;
+    display: flex;
+}
+
+.footer-section .logo h1[title="WEB"]{
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 21px;
+    letter-spacing: 0.03em;
+    color: #4D5AE5;
+}
+
+.footer-section .logo h1[title="STUDIO"]{
+    font-family: Raleway;
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 21px;
+    letter-spacing: 0.03em;
+    color:white;
+}
+
